--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:357935783557:ios:c30df50b09ca6b1c7ed3ec",
-  "FIREBASE_PROJECT_ID": "budget-app-89e2f",
-  "GCM_SENDER_ID": "357935783557"
+  "GOOGLE_APP_ID": "1:650570498112:ios:1fb8919f87297ad46f1fa5",
+  "FIREBASE_PROJECT_ID": "budget-app-b8d08",
+  "GCM_SENDER_ID": "650570498112"
 }
