--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   logger: ^2.0.2+1
   cloud_firestore:
   firebase_auth:
+  firebase_core: ^2.23.0
   flutter_hooks:
   hooks_riverpod:
   google_fonts:
@@ -26,11 +27,16 @@ dependencies:
   sign_button: ^2.0.2
   url_strategy: ^0.2.0
   url_launcher: ^6.1.14
-  flutter_svg: ^2.0.7
+  flutter_svg: ^1.0.3
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_app_name: ^0.1.0
+
+flutter_app_name:
+  name: "Budget App"
 
 
   flutter_lints: ^2.0.0
